tests/dfrouter/errors/detector_files/broken_detectors_file1k/errors.dfrouter
Error: Attribute 'lane' is missing in definition of detectorDefinition 'MQ11Fs1'.
Error: Process Error
Quitting (on error).
